CHANGELOG
=========

1.3.3 (unreleased)
------------------

* Enabled django-mptt 0.9
* Converted QueryDict to dict before manipulating in admin

1.3.2 (2018-04-23)
------------------

* Don't show set public / set private actions if permissions are disabled.

1.3.1 (2018-04-15)
------------------

* Allowed easy-thumbnails < 3 in setup.py
* Fixed broken reference for delete icon
* Fixed minor documentation issues
* Fixed travis configuration
* Fixed a regression with loading and dumping fixtures (#965)
* Added callable instead of setting as Filer.is_public default
* Fixed canonical URL computation
* Fixed image preview target size
* Fixed translatable string
* Updated translations
* Changed file size field to BigIntegerField
* Fixed import_files command to work on Django 1.10+
* Used get_queryset in FolderAdmin instead of the manager
* Cleaned up swapped models implementation
* Allowed django-polymorphic>_2.0

1.3.0 (2017-11-02)
------------------

* Introduced Django 1.11 support
* Fixed `get_css_position` filter breaking when there is no image
* Fixed missing html title when adding folders
* Fixed a regression where third party app migrations would require the
  ``FILER_IMAGE_MODEL`` setting.

1.2.7 (2017-03-02)
------------------

* Added 'get_css_position' template filter for background images
* Updated translations


1.2.6 (2017-01-13)
------------------

* Fixed markup issue with editing file in admin
* Fixed error message not always showing up properly
* Added generate thumbnails management command
* Fixed dropzone styles on smaller widths
* Fixed dropzones in inlines not initializing in Django < 1.9
* Added an action button to the directory listings to download files
* Added support for Django 1.10
* Added title attribute to the file name
* Fixed an issue whereas the CSS was compiled incorrectly
* Fixed an issue where links failed to open from django CMS sideframe
* Fixes object tools placement on image detail page and removed background color and shadow